# codecrafters-kafka-rust

./: .gitignore  ;  Cargo.toml  README.md  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bnf9k6q2hrpwnxkx6a0013yi1cx6hy7v-source  dsbxx72cvgcbb4biz37q32aslf4dvyay-source  f0c206w7fci9nqpd23kcr0vlrr2aqwcx-source
src/: api_versions.rs  apis.rs  errors.rs  lib.rs  main.rs
