[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "codecrafters_kafka"

[dependencies]
anyhow = "1.0.68"                                                     # error handling
bytes = "1.3.0"                                                       # helps manage buffers
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "1.0.38"                                                  # error handling
